Add enhanced UI with smart polling, analytics, and few-shot examples

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -1,8 +1,8 @@
-# Streamlit Secrets Configuration Example
-# Copy this file to .streamlit/secrets.toml and fill in your actual API keys
-# NEVER commit the actual secrets.toml file!
+# Streamlit Cloud Secrets Configuration
+# When deploying to Streamlit Cloud, add these as secrets in the dashboard
+# Settings > Secrets > Edit Secrets
+# NEVER commit actual API keys!
 
-[secrets]
 NOTION_TOKEN = "secret_YOUR_NOTION_INTEGRATION_TOKEN"
 NOTION_DATABASE_ID = "YOUR_32_CHARACTER_DATABASE_ID"
 TAVILY_API_KEY = "tvly-YOUR_TAVILY_KEY"
